MiniJavaCompiler/BuildOutputs/parser.output
Grammar

    0 $accept: Program $end

    1 Program: MainClassDeclaration ClassDeclarationList

    2 MainClassDeclaration: CLASS IDENTIFIER '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' IDENTIFIER ')' '{' Statement '}' '}'

    3 ClassDeclarationList: /* empty */
    4                     | ClassDeclaration ClassDeclarationList

    5 ClassDeclaration: CLASS IDENTIFIER '{' VariableDeclarationList MethodDeclarationList '}'
    6                 | CLASS IDENTIFIER EXTENDS IDENTIFIER '{' VariableDeclarationList MethodDeclarationList '}'

    7 VariableDeclarationList: /* empty */
    8                        | VariableDeclarationList VariableDeclaration

    9 VariableDeclaration: Type IDENTIFIER ';'

   10 MethodDeclarationList: /* empty */
   11                      | MethodDeclaration MethodDeclarationList

   12 MethodDeclaration: PUBLIC Type IDENTIFIER '(' FormalList ')' '{' VariableDeclarationList StatementList RETURN Expression ';' '}'

   13 FormalList: /* empty */
   14           | Type IDENTIFIER FormalRestList

   15 FormalRestList: /* empty */
   16               | FormalRest FormalRestList

   17 FormalRest: ',' Type IDENTIFIER

   18 Type: INT '[' ']'
   19     | BOOL
   20     | INT
   21     | IDENTIFIER

   22 StatementList: /* empty */
   23              | Statement StatementList

   24 Statement: '{' StatementList '}'
   25          | IF '(' Expression ')' Statement ELSE Statement
   26          | WHILE '(' Expression ')' Statement
   27          | PRINTLN '(' Expression ')' ';'
   28          | IDENTIFIER '=' Expression ';'
   29          | IDENTIFIER '[' Expression ']' '=' Expression ';'

   30 Expression: Expression AND Expression
   31           | Expression '<' Expression
   32           | Expression '+' Expression
   33           | Expression '-' Expression
   34           | '-' Expression
   35           | Expression '*' Expression
   36           | Expression '/' Expression
   37           | Expression '[' Expression ']'
   38           | Expression '.' LENGTH
   39           | Expression '.' IDENTIFIER '(' ExpressionList ')'
   40           | INTEGER_VAL
   41           | BOOLEAN_VAL
   42           | IDENTIFIER
   43           | THIS
   44           | NEW INT '[' Expression ']'
   45           | NEW IDENTIFIER '(' ')'
   46           | '!' Expression
   47           | '(' Expression ')'

   48 ExpressionList: /* empty */
   49               | Expression ExpressionRestList

   50 ExpressionRestList: /* empty */
   51                   | ExpressionRest ExpressionRestList

   52 ExpressionRest: ',' Expression


Terminals, with rules where they appear

$end (0) 0
'!' (33) 46
'(' (40) 2 12 25 26 27 39 45 47
')' (41) 2 12 25 26 27 39 45 47
'*' (42) 35
'+' (43) 32
',' (44) 17 52
'-' (45) 33 34
'.' (46) 38 39
'/' (47) 36
';' (59) 9 12 27 28 29
'<' (60) 31
'=' (61) 28 29
'[' (91) 2 18 29 37 44
']' (93) 2 18 29 37 44
'{' (123) 2 5 6 12 24
'}' (125) 2 5 6 12 24
error (256)
INTEGER_VAL (258) 40
BOOLEAN_VAL (259) 41
VOID (260) 2
STRING (261) 2
INT (262) 18 20 44
BOOL (263) 19
IDENTIFIER (264) 2 5 6 9 12 14 17 21 28 29 39 42 45
PRINTLN (265) 27
THIS (266) 43
NEW (267) 44 45
WHILE (268) 26
IF (269) 25
RETURN (270) 12
EXTENDS (271) 6
LENGTH (272) 38
PUBLIC (273) 2 12
CLASS (274) 2 5 6
STATIC (275) 2
MAIN (276) 2
ELSE (277) 25
AND (278) 30
UMINUS (279)


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
Program (42)
    on left: 1, on right: 0
MainClassDeclaration (43)
    on left: 2, on right: 1
ClassDeclarationList (44)
    on left: 3 4, on right: 1 4
ClassDeclaration (45)
    on left: 5 6, on right: 4
VariableDeclarationList (46)
    on left: 7 8, on right: 5 6 8 12
VariableDeclaration (47)
    on left: 9, on right: 8
MethodDeclarationList (48)
    on left: 10 11, on right: 5 6 11
MethodDeclaration (49)
    on left: 12, on right: 11
FormalList (50)
    on left: 13 14, on right: 12
FormalRestList (51)
    on left: 15 16, on right: 14 16
FormalRest (52)
    on left: 17, on right: 16
Type (53)
    on left: 18 19 20 21, on right: 9 12 14 17
StatementList (54)
    on left: 22 23, on right: 12 23 24
Statement (55)
    on left: 24 25 26 27 28 29, on right: 2 23 25 26
Expression (56)
    on left: 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47,
    on right: 12 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 44 46
    47 49 52
ExpressionList (57)
    on left: 48 49, on right: 39
ExpressionRestList (58)
    on left: 50 51, on right: 49 51
ExpressionRest (59)
    on left: 52, on right: 51


State 0

    0 $accept: . Program $end

    CLASS  shift, and go to state 1

    Program               go to state 2
    MainClassDeclaration  go to state 3


State 1

    2 MainClassDeclaration: CLASS . IDENTIFIER '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' IDENTIFIER ')' '{' Statement '}' '}'

    IDENTIFIER  shift, and go to state 4


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 5


State 3

    1 Program: MainClassDeclaration . ClassDeclarationList

    CLASS  shift, and go to state 6

    $default  reduce using rule 3 (ClassDeclarationList)

    ClassDeclarationList  go to state 7
    ClassDeclaration      go to state 8


State 4

    2 MainClassDeclaration: CLASS IDENTIFIER . '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' IDENTIFIER ')' '{' Statement '}' '}'

    '{'  shift, and go to state 9


State 5

    0 $accept: Program $end .

    $default  accept


State 6

    5 ClassDeclaration: CLASS . IDENTIFIER '{' VariableDeclarationList MethodDeclarationList '}'
    6                 | CLASS . IDENTIFIER EXTENDS IDENTIFIER '{' VariableDeclarationList MethodDeclarationList '}'

    IDENTIFIER  shift, and go to state 10


State 7

    1 Program: MainClassDeclaration ClassDeclarationList .

    $default  reduce using rule 1 (Program)


State 8

    4 ClassDeclarationList: ClassDeclaration . ClassDeclarationList

    CLASS  shift, and go to state 6

    $default  reduce using rule 3 (ClassDeclarationList)

    ClassDeclarationList  go to state 11
    ClassDeclaration      go to state 8


State 9

    2 MainClassDeclaration: CLASS IDENTIFIER '{' . PUBLIC STATIC VOID MAIN '(' STRING '[' ']' IDENTIFIER ')' '{' Statement '}' '}'

    PUBLIC  shift, and go to state 12


State 10

    5 ClassDeclaration: CLASS IDENTIFIER . '{' VariableDeclarationList MethodDeclarationList '}'
    6                 | CLASS IDENTIFIER . EXTENDS IDENTIFIER '{' VariableDeclarationList MethodDeclarationList '}'

    EXTENDS  shift, and go to state 13
    '{'      shift, and go to state 14


State 11

    4 ClassDeclarationList: ClassDeclaration ClassDeclarationList .

    $default  reduce using rule 4 (ClassDeclarationList)


State 12

    2 MainClassDeclaration: CLASS IDENTIFIER '{' PUBLIC . STATIC VOID MAIN '(' STRING '[' ']' IDENTIFIER ')' '{' Statement '}' '}'

    STATIC  shift, and go to state 15


State 13

    6 ClassDeclaration: CLASS IDENTIFIER EXTENDS . IDENTIFIER '{' VariableDeclarationList MethodDeclarationList '}'

    IDENTIFIER  shift, and go to state 16


State 14

    5 ClassDeclaration: CLASS IDENTIFIER '{' . VariableDeclarationList MethodDeclarationList '}'

    $default  reduce using rule 7 (VariableDeclarationList)

    VariableDeclarationList  go to state 17


State 15

    2 MainClassDeclaration: CLASS IDENTIFIER '{' PUBLIC STATIC . VOID MAIN '(' STRING '[' ']' IDENTIFIER ')' '{' Statement '}' '}'

    VOID  shift, and go to state 18


State 16

    6 ClassDeclaration: CLASS IDENTIFIER EXTENDS IDENTIFIER . '{' VariableDeclarationList MethodDeclarationList '}'

    '{'  shift, and go to state 19


State 17

    5 ClassDeclaration: CLASS IDENTIFIER '{' VariableDeclarationList . MethodDeclarationList '}'
    8 VariableDeclarationList: VariableDeclarationList . VariableDeclaration

    INT         shift, and go to state 20
    BOOL        shift, and go to state 21
    IDENTIFIER  shift, and go to state 22
    PUBLIC      shift, and go to state 23

    $default  reduce using rule 10 (MethodDeclarationList)

    VariableDeclaration    go to state 24
    MethodDeclarationList  go to state 25
    MethodDeclaration      go to state 26
    Type                   go to state 27


State 18

    2 MainClassDeclaration: CLASS IDENTIFIER '{' PUBLIC STATIC VOID . MAIN '(' STRING '[' ']' IDENTIFIER ')' '{' Statement '}' '}'

    MAIN  shift, and go to state 28


State 19

    6 ClassDeclaration: CLASS IDENTIFIER EXTENDS IDENTIFIER '{' . VariableDeclarationList MethodDeclarationList '}'

    $default  reduce using rule 7 (VariableDeclarationList)

    VariableDeclarationList  go to state 29


State 20

   18 Type: INT . '[' ']'
   20     | INT .

    '['  shift, and go to state 30

    $default  reduce using rule 20 (Type)


State 21

   19 Type: BOOL .

    $default  reduce using rule 19 (Type)


State 22

   21 Type: IDENTIFIER .

    $default  reduce using rule 21 (Type)


State 23

   12 MethodDeclaration: PUBLIC . Type IDENTIFIER '(' FormalList ')' '{' VariableDeclarationList StatementList RETURN Expression ';' '}'

    INT         shift, and go to state 20
    BOOL        shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    Type  go to state 31


State 24

    8 VariableDeclarationList: VariableDeclarationList VariableDeclaration .

    $default  reduce using rule 8 (VariableDeclarationList)


State 25

    5 ClassDeclaration: CLASS IDENTIFIER '{' VariableDeclarationList MethodDeclarationList . '}'

    '}'  shift, and go to state 32


State 26

   11 MethodDeclarationList: MethodDeclaration . MethodDeclarationList

    PUBLIC  shift, and go to state 23

    $default  reduce using rule 10 (MethodDeclarationList)

    MethodDeclarationList  go to state 33
    MethodDeclaration      go to state 26


State 27

    9 VariableDeclaration: Type . IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 34


State 28

    2 MainClassDeclaration: CLASS IDENTIFIER '{' PUBLIC STATIC VOID MAIN . '(' STRING '[' ']' IDENTIFIER ')' '{' Statement '}' '}'

    '('  shift, and go to state 35


State 29

    6 ClassDeclaration: CLASS IDENTIFIER EXTENDS IDENTIFIER '{' VariableDeclarationList . MethodDeclarationList '}'
    8 VariableDeclarationList: VariableDeclarationList . VariableDeclaration

    INT         shift, and go to state 20
    BOOL        shift, and go to state 21
    IDENTIFIER  shift, and go to state 22
    PUBLIC      shift, and go to state 23

    $default  reduce using rule 10 (MethodDeclarationList)

    VariableDeclaration    go to state 24
    MethodDeclarationList  go to state 36
    MethodDeclaration      go to state 26
    Type                   go to state 27


State 30

   18 Type: INT '[' . ']'

    ']'  shift, and go to state 37


State 31

   12 MethodDeclaration: PUBLIC Type . IDENTIFIER '(' FormalList ')' '{' VariableDeclarationList StatementList RETURN Expression ';' '}'

    IDENTIFIER  shift, and go to state 38


State 32

    5 ClassDeclaration: CLASS IDENTIFIER '{' VariableDeclarationList MethodDeclarationList '}' .

    $default  reduce using rule 5 (ClassDeclaration)


State 33

   11 MethodDeclarationList: MethodDeclaration MethodDeclarationList .

    $default  reduce using rule 11 (MethodDeclarationList)


State 34

    9 VariableDeclaration: Type IDENTIFIER . ';'

    ';'  shift, and go to state 39


State 35

    2 MainClassDeclaration: CLASS IDENTIFIER '{' PUBLIC STATIC VOID MAIN '(' . STRING '[' ']' IDENTIFIER ')' '{' Statement '}' '}'

    STRING  shift, and go to state 40


State 36

    6 ClassDeclaration: CLASS IDENTIFIER EXTENDS IDENTIFIER '{' VariableDeclarationList MethodDeclarationList . '}'

    '}'  shift, and go to state 41


State 37

   18 Type: INT '[' ']' .

    $default  reduce using rule 18 (Type)


State 38

   12 MethodDeclaration: PUBLIC Type IDENTIFIER . '(' FormalList ')' '{' VariableDeclarationList StatementList RETURN Expression ';' '}'

    '('  shift, and go to state 42


State 39

    9 VariableDeclaration: Type IDENTIFIER ';' .

    $default  reduce using rule 9 (VariableDeclaration)


State 40

    2 MainClassDeclaration: CLASS IDENTIFIER '{' PUBLIC STATIC VOID MAIN '(' STRING . '[' ']' IDENTIFIER ')' '{' Statement '}' '}'

    '['  shift, and go to state 43


State 41

    6 ClassDeclaration: CLASS IDENTIFIER EXTENDS IDENTIFIER '{' VariableDeclarationList MethodDeclarationList '}' .

    $default  reduce using rule 6 (ClassDeclaration)


State 42

   12 MethodDeclaration: PUBLIC Type IDENTIFIER '(' . FormalList ')' '{' VariableDeclarationList StatementList RETURN Expression ';' '}'

    INT         shift, and go to state 20
    BOOL        shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    $default  reduce using rule 13 (FormalList)

    FormalList  go to state 44
    Type        go to state 45


State 43

    2 MainClassDeclaration: CLASS IDENTIFIER '{' PUBLIC STATIC VOID MAIN '(' STRING '[' . ']' IDENTIFIER ')' '{' Statement '}' '}'

    ']'  shift, and go to state 46


State 44

   12 MethodDeclaration: PUBLIC Type IDENTIFIER '(' FormalList . ')' '{' VariableDeclarationList StatementList RETURN Expression ';' '}'

    ')'  shift, and go to state 47


State 45

   14 FormalList: Type . IDENTIFIER FormalRestList

    IDENTIFIER  shift, and go to state 48


State 46

    2 MainClassDeclaration: CLASS IDENTIFIER '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' . IDENTIFIER ')' '{' Statement '}' '}'

    IDENTIFIER  shift, and go to state 49


State 47

   12 MethodDeclaration: PUBLIC Type IDENTIFIER '(' FormalList ')' . '{' VariableDeclarationList StatementList RETURN Expression ';' '}'

    '{'  shift, and go to state 50


State 48

   14 FormalList: Type IDENTIFIER . FormalRestList

    ','  shift, and go to state 51

    $default  reduce using rule 15 (FormalRestList)

    FormalRestList  go to state 52
    FormalRest      go to state 53


State 49

    2 MainClassDeclaration: CLASS IDENTIFIER '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' IDENTIFIER . ')' '{' Statement '}' '}'

    ')'  shift, and go to state 54


State 50

   12 MethodDeclaration: PUBLIC Type IDENTIFIER '(' FormalList ')' '{' . VariableDeclarationList StatementList RETURN Expression ';' '}'

    $default  reduce using rule 7 (VariableDeclarationList)

    VariableDeclarationList  go to state 55


State 51

   17 FormalRest: ',' . Type IDENTIFIER

    INT         shift, and go to state 20
    BOOL        shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    Type  go to state 56


State 52

   14 FormalList: Type IDENTIFIER FormalRestList .

    $default  reduce using rule 14 (FormalList)


State 53

   16 FormalRestList: FormalRest . FormalRestList

    ','  shift, and go to state 51

    $default  reduce using rule 15 (FormalRestList)

    FormalRestList  go to state 57
    FormalRest      go to state 53


State 54

    2 MainClassDeclaration: CLASS IDENTIFIER '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' IDENTIFIER ')' . '{' Statement '}' '}'

    '{'  shift, and go to state 58


State 55

    8 VariableDeclarationList: VariableDeclarationList . VariableDeclaration
   12 MethodDeclaration: PUBLIC Type IDENTIFIER '(' FormalList ')' '{' VariableDeclarationList . StatementList RETURN Expression ';' '}'

    INT         shift, and go to state 20
    BOOL        shift, and go to state 21
    IDENTIFIER  shift, and go to state 59
    PRINTLN     shift, and go to state 60
    WHILE       shift, and go to state 61
    IF          shift, and go to state 62
    '{'         shift, and go to state 63
